--- a/package.json
+++ b/package.json
@@ -2,19 +2,33 @@
   "private": true,
   "author": "tyuqing <tyuqing7@163.com>",
   "scripts": {
-    "dev": "umi dev",
     "build": "umi build",
+    "dev": "umi dev",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx,vue} --fix",
     "postinstall": "umi setup",
+    "prepare": "husky install",
     "setup": "umi setup",
     "start": "npm run dev"
   },
   "dependencies": {
+    "eslint": "^8.36.0",
     "three": "^0.150.1",
     "umi": "^4.0.57"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "typescript": "^4.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
