--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "babylonjs": "^6.28.1",
     "eslint": "^8.36.0",
     "three": "^0.150.1",
     "umi": "^4.0.57"
